--- a/main.css
+++ b/main.css
@@ -1,10 +1,23 @@
 body {
 
-	background: #777;
+	background: grey;
 	color:white;
 }
 
 h1, footer {
 
 	text-align: center;
+}
+
+.container {
+
+	width: 90%;
+	margin: 0 auto;
+}
+
+footer {
+	bottom: 0;
+	left:0;
+	right: 0;
+	position: fixed;
 }
